improve contact page

--- a/web/public/contact.html
+++ b/web/public/contact.html
@@ -59,18 +59,23 @@
           </p>
         </section>
 
-        <!-- Sección de Dirección -->
+        <!-- Sección de Dirección con el mapa embebido -->
         <section class="address-section">
           <h2>Dirección</h2>
-          <a
-            href="https://www.google.com/maps"
-            class="maps-link"
-            target="_blank"
-            >Encuéntranos en Google Maps &rarr;</a
-          >
           <div class="address">
-            <i class="building-icon"></i>
-            <p>Plaza de la milagrosa</p>
+            <p>Pl. Virgen Milagrosa, 11, Málaga-Este, 29017 Málaga</p>
+          </div>
+          <!-- Mapa embebido de Google Maps -->
+          <div class="map-container">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2894.1302471120534!2d-4.365635300000001!3d36.7197265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd7259120bfc4db3%3A0xec0ecedd8dc61902!2sCESUR%20M%C3%A1laga%20Este%20Formaci%C3%B3n%20Profesional!5e1!3m2!1ses!2ses!4v1729165183813!5m2!1ses!2ses"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </section>
       </div>
